fix AOS overflow-x

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,7 @@
+html,body{
+    overflow-x: hidden;
+}
+
 /* 共用CSS */
 .area-space{
     margin: 20px 0;
